# rust-wallet

./: .gitignore  Cargo.toml  Dockerfile  README.md
docs/: network.md
src/: lib.rs  main.rs  router.rs  types.rs  utils.rs  wallet.rs
src/handlers/: balance.rs  creation.rs  mod.rs  system.rs  transaction.rs
tests/: wallet_tests.rs
