[package]
name = "evm-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Alloy - Modern Rust EVM library
alloy = { version = "1.0.1", features = ["full", "node-bindings"] }

# Cryptography - use older compatible version
bip39 = "1.0"
secp256k1 = { version = "0.29", features = ["rand", "recovery"] }
k256 = "0.13"
getrandom = "0.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Web Framework (REST API)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"

clap = { version = "4.0", features = ["derive"] }
